<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bienvenueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/login"
            android:textColor="@color/color_primary"
            android:textSize="36sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bienvenueText"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/bottomBar"
            android:backgroundTint="@color/white"
            android:hint="@string/username"
            android:textColorHint="@color/grey_font"
            app:boxBackgroundColor="@color/bottomBar"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_font"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:elevation="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/grey_font"
            app:boxBackgroundColor="@color/bottomBar"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/signin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/mdp_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/color_primary"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:src="@drawable/ic_next"
                android:contentDescription="arrow"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:src="@drawable/ic_check_animated"
                android:visibility="gone"
                android:contentDescription="check"
                tools:ignore="HardcodedText" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone">

            </ProgressBar>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>